fix: Toc top margin on mobile

--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -122,7 +122,7 @@ pre code.hljs {
         padding: 1.25em 1em;
         height: 100%;
         overflow: auto;
-        padding-top: 60px;
+        padding-top: 90px;
     }
 
     #toc.toc #toctitle {
